--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <h6>
                   Price
                   <span>
-                    RP 65000
+                    RP 65,000
                   </span>
                 </h6>
               </div>
@@ -201,7 +201,7 @@
                 <h6>
                   Price
                   <span>
-                    RP 90000
+                    RP 90,000
                   </span>
                 </h6>
               </div>
@@ -226,7 +226,7 @@
                 <h6>
                   Price
                   <span>
-                    RP 35000
+                    RP 35,000
                   </span>
                 </h6>
               </div>
@@ -246,12 +246,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Mukana
+                  Mukena
                 </h6>
                 <h6>
                   Price
                   <span>
-                  RP 120000
+                  RP 120,000
                   </span>
                 </h6>
               </div>
@@ -271,12 +271,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Vergo
+                  Bergo
                 </h6>
                 <h6>
                   Price
                   <span>
-                    RP 40000
+                    RP 40,000
                   </span>
                 </h6>
               </div>
@@ -296,12 +296,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Peshmina
+                  Pashmina
                 </h6>
                 <h6>
                   Price
                   <span>
-                    RP 30000
+                    RP 30,000
                   </span>
                 </h6>
               </div>
@@ -321,12 +321,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Vergo
+                  Bergo
                 </h6>
                 <h6>
                   Price
                   <span>
-                    RP 30000
+                    RP 30,000
                   </span>
                 </h6>
               </div>
@@ -346,12 +346,12 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  Rock
+                  Rok
                 </h6>
                 <h6>
                   Price
                   <span>
-                    RP 75000
+                    RP 75,000
                   </span>
                 </h6>
               </div>
@@ -682,8 +682,8 @@
             <div class="detail-box">
               <div class="heading_container">
                 <h2>
-                  Gifts for your <br>
-                  loved ones
+                  Aisyah Fashion <br>
+                  
                 </h2>
               </div>
               <p>
